Localize home page content and footer

--- a/src/localization/ar/translation.json
+++ b/src/localization/ar/translation.json
@@ -40,40 +40,164 @@
 		"signup": "إنشاء حساب",
 		"login": "تسجيل الدخول"
 	},
-	"hero": {
-		"headline": "افتح إمكاناتك الإبداعية",
-		"subline": "من خلال دورات التصميم والتطوير عبر الإنترنت.",
-		"desc": "تعلّم من خبراء الصناعة وطوّر مهاراتك.",
-		"explore": "استكشف الدورات",
-		"pricing": "عرض الأسعار"
-	},
-	"benefits": {
-		"title": "المميزات",
-		"subtitle": "تعلّم من خبراء الصناعة وطوّر مهاراتك.",
-		"items": {
-			"1": "جدول تعلّم مرن",
-			"2": "تعليم من خبراء",
-			"3": "تنوع في الدورات",
-			"4": "مناهج محدثة",
-			"5": "مشاريع عملية وتكليفات",
-			"6": "بيئة تعلم تفاعلية"
-		}
-	},
-
-	"testimonials": {
-		"title": "آراء طلابنا",
-		"desc": "هذا النص هو مثال لوصف قسم التوصيات. يمكن استبداله بنصوص حقيقية لاحقاً.",
-		"read": "اقرأ القصة كاملة"
-	},
-	"pricing": {
-		"title": "خطط الأسعار",
-		"desc": "هذا النص هو مثال لوصف قسم الأسعار. يمكن استبداله بنصوص حقيقية لاحقاً.",
-		"monthly": "شهري",
-		"yearly": "سنوي",
-		"free": "الخطة المجانية",
-		"pro": "الخطة الاحترافية",
-		"month": "/شهر",
-		"features": "المميزات المتاحة",
-		"get": "ابدأ الآن"
-	}
+        "hero": {
+                "highlight": "افتح",
+                "headline": "إمكاناتك الإبداعية",
+                "subline": "من خلال دورات التصميم والتطوير عبر الإنترنت.",
+                "desc": "تعلّم من خبراء الصناعة وطوّر مهاراتك.",
+                "explore": "استكشف الدورات",
+                "pricing": "عرض الأسعار"
+        },
+        "benefits": {
+                "title": "المميزات",
+                "subtitle": "تعلّم من خبراء الصناعة وطوّر مهاراتك.",
+                "items": [
+                        {
+                                "num": "01",
+                                "title": "جدول تعلّم مرن",
+                                "text": "انجز دراستك بما يتناسب مع التزاماتك اليومية."
+                        },
+                        {
+                                "num": "02",
+                                "title": "تعليم من خبراء",
+                                "text": "تعلّم على يد خبراء يمتلكون خبرة عملية حقيقية."
+                        },
+                        {
+                                "num": "03",
+                                "title": "تنوع في الدورات",
+                                "text": "استكشف مجموعة واسعة من دورات التصميم والتطوير."
+                        },
+                        {
+                                "num": "04",
+                                "title": "مناهج محدثة",
+                                "text": "احصل على محتوى محدث يعكس أحدث الاتجاهات والممارسات في السوق."
+                        },
+                        {
+                                "num": "05",
+                                "title": "مشاريع عملية وتكليفات",
+                                "text": "ابنِ معرض أعمال يبرز مهاراتك أمام أصحاب العمل المحتملين."
+                        },
+                        {
+                                "num": "06",
+                                "title": "بيئة تعلّم تفاعلية",
+                                "text": "تعاون مع المتعلمين الآخرين وتبادل الأفكار لتعميق فهمك."
+                        }
+                ]
+        },
+        "courses": {
+                "title": "دوراتنا",
+                "subtitle": "تعلّم من خبراء الصناعة وطوّر مهاراتك.",
+                "cta": "احصل عليها الآن",
+                "by": "بواسطة {{name}}",
+                "items": {
+                        "webDesign": {
+                                "duration": "4 أسابيع",
+                                "level": "مبتدئ",
+                                "instructor": "جون سميث",
+                                "title": "أساسيات تصميم الويب",
+                                "description": "تعلّم أساسيات تصميم الويب بما في ذلك HTML وCSS ومبادئ التصميم المتجاوب."
+                        },
+                        "uiux": {
+                                "duration": "6 أسابيع",
+                                "level": "متوسط",
+                                "instructor": "إيميلي جونسون",
+                                "title": "تصميم واجهات وتجربة المستخدم",
+                                "description": "أتقن ابتكار واجهات استخدام بديهية وتحسين تجارب المستخدمين."
+                        }
+                }
+        },
+        "testimonials": {
+                "title": "آراء طلابنا",
+                "desc": "اكتشف كيف ساعدت دوراتنا المتعلمين على تطوير مسيرتهم المهنية.",
+                "read": "اقرأ القصة كاملة",
+                "items": {
+                        "doha": {
+                                "name": "دعاء",
+                                "text": "قدمت دورة تصميم الويب أساسًا متينًا لي. كان المدرسون ذوي خبرة وداعمين، ووفرت البيئة التفاعلية تجربة ممتعة. أنصح بها بشدة!"
+                        },
+                        "ahmed": {
+                                "name": "أحمد",
+                                "text": "تجاوزت دورة تصميم واجهات وتجربة المستخدم توقعاتي. ساعدتني خبرة المدرب والواجبات العملية على تحسين مهاراتي التصميمية وزيادة ثقتي بنفسي. شكرًا لكم!"
+                        },
+                        "hoda": {
+                                "name": "هدى",
+                                "text": "كانت دورة تطوير تطبيقات الهواتف رائعة! ساعدتني الدروس خطوة بخطوة والمشاريع التطبيقية على فهم المفاهيم بسهولة، والآن أعمل على تطبيق خاص بي. دورة ممتازة!"
+                        },
+                        "abdulrhman": {
+                                "name": "عبدالرحمن",
+                                "text": "التحقت بدورة التصميم الجرافيكي كمبتدئ وكانت نقطة بداية مثالية. إرشادات المدرب وملاحظاته حسّنت من قدراتي بشكل كبير. ممتن جدًا لهذه الدورة!"
+                        }
+                }
+        },
+        "partners": {
+                "items": {
+                        "zapier": "زابير",
+                        "spotify": "سبوتيفاي",
+                        "zoom": "زووم",
+                        "amazon": "أمازون",
+                        "adobe": "أدوبي",
+                        "notion": "نوشن",
+                        "netflix": "نتفليكس"
+                }
+        },
+        "video": {
+                "title": "فيديو تعريفي بالدورة"
+        },
+        "pricing": {
+                "title": "خطط الأسعار",
+                "desc": "اختر الخطة التي تناسب أهدافك التعليمية وميزانيتك.",
+                "monthly": "شهري",
+                "yearly": "سنوي",
+                "free": "الخطة المجانية",
+                "pro": "الخطة الاحترافية",
+                "month": "/شهر",
+                "features": {
+                        "title": "المميزات المتاحة",
+                        "free": [
+                                { "label": "الوصول إلى مجموعة مختارة من الدورات المجانية.", "included": true },
+                                { "label": "مواد تعليمية وموارد محدودة.", "included": true },
+                                { "label": "دعم أساسي من المجتمع.", "included": true },
+                                { "label": "لا توجد شهادة عند الإنهاء.", "included": true },
+                                { "label": "منصة مدعومة بالإعلانات.", "included": true },
+                                { "label": "الوصول إلى منتديات مجتمع الخطة الاحترافية.", "included": false },
+                                { "label": "الوصول المبكر إلى الدورات والتحديثات الجديدة.", "included": false }
+                        ],
+                        "pro": [
+                                { "label": "وصول غير محدود إلى جميع الدورات.", "included": true },
+                                { "label": "مواد تعليمية وموارد غير محدودة.", "included": true },
+                                { "label": "دعم أولوية من المدرسين.", "included": true },
+                                { "label": "شهادات إتمام الدورات.", "included": true },
+                                { "label": "تجربة خالية من الإعلانات.", "included": true },
+                                { "label": "الوصول إلى منتديات مجتمع الخطة الاحترافية.", "included": true },
+                                { "label": "الوصول المبكر إلى الدورات والتحديثات الجديدة.", "included": true }
+                        ]
+                },
+                "get": "ابدأ الآن"
+        },
+        "footer": {
+                "contact": {
+                        "email": "hello@skillbridge.com",
+                        "phone": "+20 123 456 7890",
+                        "location": "القاهرة، مصر"
+                },
+                "sections": {
+                        "home": {
+                                "title": "الرئيسية",
+                                "links": ["المميزات", "دوراتنا", "آراء طلابنا", "الأسئلة الشائعة"]
+                        },
+                        "about": {
+                                "title": "من نحن",
+                                "links": ["الشركة", "الوظائف", "الصحافة", "الأخبار"]
+                        },
+                        "social": {
+                                "title": "حساباتنا الاجتماعية",
+                                "labels": {
+                                        "facebook": "فيسبوك",
+                                        "twitter": "تويتر",
+                                        "linkedin": "لينكدإن"
+                                }
+                        }
+                },
+                "rights": "@2025 سكيلبريدج. جميع الحقوق محفوظة"
+        }
 }
