--- a/src/localization/ar/translation.json
+++ b/src/localization/ar/translation.json
@@ -1,4 +1,35 @@
 {
+	"nav": {
+		"logoAlt": "شركتك",
+		"openMenu": "افتح القائمة الرئيسية",
+		"promo": {
+			"beforeStar": "دورة مجانية",
+			"afterStar": "ينتهي العرض قريبًا، احصل عليه الآن"
+		},
+		"menu": {
+			"home": "الرئيسية",
+			"courses": "الكورسات",
+			"myCourses": "كورساتي",
+			"about": "من نحن",
+			"pricing": "الأسعار",
+			"contact": "تواصل معنا",
+			"wishlist": "المفضلة"
+		},
+		"auth": {
+			"signup": "إنشاء حساب",
+			"login": "تسجيل الدخول",
+			"logout": "تسجيل الخروج",
+			"welcome": "مرحبًا، {{name}}"
+		},
+		"language": {
+			"short": {
+				"en": "EN",
+				"ar": "AR"
+			},
+			"switchToArabic": "التبديل إلى العربية",
+			"switchToEnglish": "التبديل إلى الإنجليزية"
+		}
+	},
 	"navbar": {
 		"home": "الرئيسية",
 		"courses": "الكورسات",
@@ -28,7 +59,6 @@
 			"6": "بيئة تعلم تفاعلية"
 		}
 	},
-
 	"testimonials": {
 		"title": "آراء طلابنا",
 		"desc": "هذا النص هو مثال لوصف قسم التوصيات. يمكن استبداله بنصوص حقيقية لاحقاً.",
@@ -44,5 +74,497 @@
 		"month": "/شهر",
 		"features": "المميزات المتاحة",
 		"get": "ابدأ الآن"
+	},
+	"auth": {
+		"login": {
+			"title": "تسجيل الدخول",
+			"welcome": "مرحبًا بعودتك! سجّل الدخول للوصول إلى حسابك.",
+			"email": "البريد الإلكتروني",
+			"emailPh": "أدخل بريدك الإلكتروني",
+			"password": "كلمة المرور",
+			"passwordPh": "أدخل كلمة المرور",
+			"remember": "تذكّرني",
+			"forgot": "نسيت كلمة المرور؟",
+			"cta": "دخول",
+			"or": "أو",
+			"google": "تسجيل دخول عبر جوجل",
+			"noAccount": "ليس لديك حساب؟",
+			"signup": "إنشاء حساب"
+		},
+		"messages": {
+			"enterEmailPass": "من فضلك أدخل البريد وكلمة المرور.",
+			"fixErrors": "من فضلك أصلح الأخطاء أولًا.",
+			"loggedIn": "تم تسجيل الدخول بنجاح!",
+			"forgotNeedEmail": "من فضلك أدخل بريدًا صحيحًا لاستلام رابط إعادة التعيين.",
+			"resetSent": "تم إرسال رسالة إعادة تعيين كلمة المرور."
+		},
+		"validation": {
+			"emailRequired": "البريد الإلكتروني مطلوب",
+			"emailInvalid": "صيغة البريد الإلكتروني غير صحيحة",
+			"passRequired": "كلمة المرور مطلوبة",
+			"passMin": "يجب أن تكون كلمة المرور 6 أحرف على الأقل"
+		},
+		"Testimonials": {
+			"StudentsTestimonials": "آراء طلابنا",
+			"readFullStory": "اقراء القصة كاملة",
+			"desc": "لقد وفرت دورة تصميم الويب أساسًا متينًا لي. كان المدرسون على دراية وداعمين، وكانت بيئة التعلم التفاعلية جذابة. أوصي بها بشدة!",
+			"name": "سارة"
+		},
+		"register": {
+			"title": "سجّل الدخول",
+			"name": "اسمك",
+			"namePh": "ادخل اسمك",
+			"welcome": "مرحبًا بعودتك! سجّل الدخول للوصول إلى حسابك.",
+			"email": "البريد الإلكتروني",
+			"emailPh": "ادخل بريدك الالكتروني",
+			"password": "كلمة المرور",
+			"passwordPh": "ادخل كلمة المرور",
+			"repass": "تأكيد كلمة المرور",
+			"repassPh": "ادخل كلمة المرور مرة اخرى",
+			"remember": "تذكّرني",
+			"forgot": "نسيت كلمة المرور؟",
+			"cta": "تسجيل الدخول",
+			"or": "او",
+			"google": "تسجيل دخول عبر جوجل",
+			"noAccount": "ليس لديك حساب؟",
+			"signup": "انشاء حساب",
+			"Role": "نوع المستخدم",
+			"student": "طالب",
+			"instructor": "محاضر",
+			"Admin ID": "رمز الدخول",
+			"Admin ID ph": "ادخل رمز الدخول",
+			"already": "لديك حساب بالفعل؟",
+			"login": "تسجيل الدخول"
+		}
+	},
+	"footer": {
+		"brand": {
+			"logoAlt": "شعار سكيلبريدج",
+			"name": "سكيلبريدج"
+		},
+		"contact": {
+			"email": "hello@skillbridge.com",
+			"phone": "+20 123 456 7890",
+			"location": "القاهرة، مصر"
+		},
+		"sections": {
+			"home": {
+				"title": "الرئيسية",
+				"items": {
+					"benefits": "المميزات",
+					"courses": "دوراتنا",
+					"testimonials": "آراء طلابنا",
+					"faq": "الأسئلة الشائعة"
+				}
+			},
+			"about": {
+				"title": "من نحن",
+				"items": {
+					"company": "الشركة",
+					"careers": "الوظائف",
+					"press": "الصحافة",
+					"news": "الأخبار"
+				}
+			},
+			"social": {
+				"title": "حسابات التواصل"
+			}
+		},
+		"copyright": "© {{year}} {{brand}}. جميع الحقوق محفوظة."
 	}
+	,
+	
+  "about_page": {
+    "header_title": "عن منصتنا",
+    "header_description": "أهلاً بك في منصتنا، حيث لدينا شغف لتمكين الأفراد من إتقان عالم التصميم والتطوير. نقدم مجموعة واسعة من الدورات التدريبية عبر الإنترنت المصممة لتزويد المتعلمين بالمهارات والمعرفة اللازمة للنجاح في المشهد الرقمي دائم التطور.",
+    "achievements_title": "إنجازاتنا",
+    "achievements_description": "التزامنا بالتميز قادنا إلى تحقيق إنجازات هامة على مدار رحلتنا. إليك بعض من أبرز إنجازاتنا.",
+    "section_title": "توفير مهارات عملية",
+    "section_paragraph": "نحن نركز على تقديم مهارات عملية تتوافق مع متطلبات الصناعة الحالية. دوراتنا مصممة لتزويد المتعلمين بالمعرفة والأدوات اللازمة للتفوق في مجالاتهم المختارة.",
+    "cta_title_highlight": "معًا،",
+    "cta_title_main": " لنصنع مستقبل الابتكار الرقمي",
+    "cta_description": "انضم إلينا في هذه الرحلة التعليمية المثيرة وأطلق العنان لإمكانياتك في التصميم والتطوير.",
+    "cta_button": "انضم الآن"
+  },
+   "contactPage": {
+    "header": {
+      "title": "تواصل معنا",
+      "paragraph": "مرحبًا بك في صفحة خطط أسعار SkillBridge، حيث نقدم خيارين شاملين لتلبية احتياجاتك: الخطة المجانية والاحترافية. نحن نؤمن بتقديم خيارات أسعار مرنة ومناسبة لخدماتنا. سواء كنت فردًا يتطلع إلى تعزيز مهاراتك أو شركة تبحث عن حلول للتطوير المهني، لدينا خطة تناسبك. استكشف خيارات الأسعار أدناه واختر الأنسب لمتطلباتك."
+    },
+    "form": {
+      "firstNameLabel": "الاسم الأول",
+      "firstNamePlaceholder": "أدخل الاسم الأول",
+      "lastNameLabel": "الاسم الأخير",
+      "lastNamePlaceholder": "أدخل الاسم الأخير",
+      "emailLabel": "البريد الإلكتروني",
+      "emailPlaceholder": "أدخل بريدك الإلكتروني",
+      "phoneLabel": "رقم الهاتف",
+      "phonePlaceholder": "أدخل رقم الهاتف",
+      "subjectLabel": "الموضوع",
+      "subjectPlaceholder": "أدخل موضوع رسالتك",
+      "messageLabel": "الرسالة",
+      "messagePlaceholder": "أدخل رسالتك هنا...",
+      "submitButton": "أرسل رسالتك"
+    },
+    "validation": {
+      "fnameRequired": "الاسم الأول مطلوب",
+      "lnameRequired": "الاسم الأخير مطلوب",
+      "emailRequired": "البريد الإلكتروني مطلوب",
+      "emailInvalid": "عنوان بريد إلكتروني غير صالح",
+      "phoneRequired": "رقم الهاتف مطلوب",
+      "phoneInvalid": "رقم هاتف غير صالح",
+      "subjectRequired": "الموضوع مطلوب",
+      "messageRequired": "الرسالة مطلوبة"
+    },
+    "sidebar": {
+      "emailAddress": "hello@skillbridge.com",
+      "phoneNumber": "+20 123 456 7890",
+      "location": "في مكان ما من العالم",
+      "socialTitle": "حسابات التواصل الاجتماعي"
+    }
+  }  ,
+  "wishlist": {
+    "title": "قائمة رغباتي",
+    "loading": "جاري التحميل…",
+    "empty": {
+      "title": "قائمة الرغبات فارغة",
+      "subtitle": "لم تحفظ أي دورات بعد. ابدأ الاستكشاف!",
+      "cta": "تصفح الدورات"
+    },
+    "card": {
+      "remove": "إزالة"
+    },
+    "price": {
+      "currencySymbol": "$"
+    }
+  },
+
+
+
+   "courses": {
+    "title_all": "كل الدورات",
+    "title_cat": "التصنيف: {{cat}}",
+    "title_search_suffix": "— البحث: “{{q}}”",
+    "search": {
+      "placeholder": "ابحث في الدورات…",
+      "clear_aria": "مسح البحث",
+      "filter_label": "تصفية حسب التصنيف",
+      "all_option": "الكل"
+    },
+    "categories": {
+      "Programming": "برمجة",
+      "Graphic Design": "تصميم جرافيك",
+      "Social Media": "وسائل التواصل الاجتماعي",
+      "Marketing": "تسويق",
+      "Ui/UX": "واجهات وتجربة المستخدم"
+    },
+    "card": {
+      "price_label": "السعر:",
+      "show_content": "عرض المحتوى",
+      "enroll": "التسجيل بالدورة"
+    },
+    "empty": {
+      "base": "لا توجد دورات",
+      "for_q": "للاستعلام “{{q}}”",
+      "in_cat": "ضمن {{cat}}"
+    }
+  },
+
+
+   "myCourses": {
+    "title": "دوراتي",
+    "loading": "جاري تحميل دوراتك…",
+    "empty": {
+      "title": "دوراتي",
+      "message": "لم تقم بالتسجيل في أي دورة بعد."
+    },
+    "price": {
+      "currencySymbol": "$"
+    },
+    "enrolled_on": "تم التسجيل في:"
+  },
+
+
+  "home": {
+    "hero": {
+      "title": "افتح إمكانياتك الإبداعية",
+      "subtitle": "مع دورات تصميم وتطوير عبر الإنترنت.",
+      "learn_line": "تعلم من خبراء الصناعة وطور مهاراتك.",
+      "cta_explore": "تصفح الدورات",
+      "cta_view_pricing": "عرض الأسعار"
+    },
+    "companies": {
+      "zapier": "zapier",
+      "spotify": "Spotify",
+      "zoom": "Zoom",
+      "amazon": "Amazon",
+      "adobe": "Adobe",
+      "notion": "Notion",
+      "netflix": "Netflix"
+    },
+    "video": {
+      "iframe_title": "فيديو يوتيوب"
+    },
+    "benefits": {
+      "title": "الفوائد",
+      "subtitle": "تعلم من خبراء الصناعة وطور مهاراتك.",
+      "items": [
+        {
+          "num": "01",
+          "title": "جدول دراسة مرن",
+          "text": "نظم دراستك حول التزاماتك الحالية."
+        },
+        {
+          "num": "02",
+          "title": "تعليم من خبراء",
+          "text": "تعلم من خبراء الصناعة ذوي الخبرة العملية."
+        },
+        {
+          "num": "03",
+          "title": "مجموعة دورات متنوعة",
+          "text": "استكشف مجموعة واسعة من دورات التصميم والتطوير."
+        },
+        {
+          "num": "04",
+          "title": "منهج محدث",
+          "text": "الوصول إلى دورات بمحتوى محدث يعكس أحدث الاتجاهات والممارسات في الصناعة."
+        },
+        {
+          "num": "05",
+          "title": "مشاريع عملية وتمارين",
+          "text": "طوّر محفظة تعرض مهاراتك وقدراتك لأصحاب العمل المحتملين."
+        },
+        {
+          "num": "06",
+          "title": "بيئة تعليم تفاعلية",
+          "text": "تعاون مع زملائك المتعلمين لتبادل الأفكار والتغذية الراجعة لتعزيز فهمك."
+        }
+      ]
+    },
+    "courses_section": {
+      "title": "دوراتنا",
+      "subtitle": "تعلم من خبراء الصناعة وطور مهاراتك.",
+      "cards": [
+        {
+          "title": "أساسيات تصميم الويب",
+          "duration": "4 أسابيع",
+          "level": "مبتدئ",
+          "instructor": "John Smith",
+          "description": "تعلم أساسيات تصميم الويب، بما في ذلك HTML وCSS ومبادئ التصميم المستجيب.",
+          "buttonText": "احصل عليه الآن"
+        },
+        {
+          "title": "تصميم واجهة المستخدم وتجربة المستخدم",
+          "duration": "6 أسابيع",
+          "level": "متوسط",
+          "instructor": "Emily Johnson",
+          "description": "اتقن فن إنشاء واجهات مستخدم بديهية وتحسين تجارب المستخدم.",
+          "buttonText": "احصل عليه الآن"
+        }
+      ]
+    },
+    "testimonials": {
+      "title": "آراء المتدربين",
+      "subtitle": "هذا نص تجريبي للعرض. يمكنك تغييره لاحقًا.",
+      "items": [
+        {
+          "name": "Doha",
+          "text": "قدمت دورة تصميم الويب أساسًا متينًا بالنسبة لي. كان المدرسون على دراية وداعمين، وكانت بيئة التعلم التفاعلية مشجعة. أنصح بها بشدة!"
+        },
+        {
+          "name": "Ahmed",
+          "text": "تفوقت دورة تصميم UI/UX على توقعاتي. خبرة المدرب والمهام العملية ساعدتني في تحسين مهاراتي في التصميم. أشعر بثقة أكبر الآن في مساري المهني. شكرًا!"
+        },
+        {
+          "name": "Hoda",
+          "text": "كانت دورة تطوير تطبيقات الجوال رائعة! الدروس خطوة بخطوة والمشروعات العملية ساعدتني على فهم المفاهيم بسهولة. الآن أبني تطبيقي الخاص. دورة ممتازة!"
+        },
+        {
+          "name": "Abdulrhman",
+          "text": "سجلت في دورة التصميم الجرافيكي كمبتدئ، وكانت نقطة البداية المثالية. توجيه المدرب وتعليقه حسّن قدراتي التصميمية بشكل كبير. ممتن جدًا لهذه الدورة!"
+        }
+      ]
+    },
+    "pricing": {
+      "title": "أسعارنا",
+      "subtitle": "هذا نص تجريبي للعرض. يمكنك تغييره لاحقًا.",
+      "toggle": {
+        "monthly": "شهري",
+        "yearly": "سنوي"
+      },
+      "plans": {
+        "free": "الخطة المجانية",
+        "pro": "الخطة الاحترافية"
+      },
+      "features": {
+        "freeFeatures": [
+          "الوصول إلى دورات مجانية محددة.",
+          "مواد ومصادر محدودة للدورة.",
+          "دعم أساسي من المجتمع.",
+          "لا توجد شهادة عند الإنتهاء.",
+          "منصة مدعومة بالإعلانات.",
+          "الوصول لمنتديات مجتمع خطة Pro الحصرية.",
+          "الوصول المبكر إلى الدورات والتحديثات الجديدة."
+        ],
+        "proFeatures": [
+          "وصول غير محدود لكل الدورات.",
+          "مواد ومصادر غير محدودة للدورة.",
+          "دعم أسبقية من المدربين.",
+          "شهادات إتمام الدورات.",
+          "تجربة بدون إعلانات.",
+          "الوصول لمنتديات مجتمع خطة Pro الحصرية.",
+          "الوصول المبكر إلى الدورات والتحديثات الجديدة."
+        ]
+      }
+    }
+  },
+
+
+  "common": {
+    "loading": "جارٍ التحميل...",
+    "backToDashboard": "الرجوع إلى لوحة التحكم",
+    "savingEllipsis": "جارٍ الحفظ...",
+    "errorPrefix": "خطأ: {{message}}",
+    "companyAlt": "شركتك"
+  },
+  "sidebar": {
+    "home": "الرئيسية",
+    "courses": "الدورات",
+    "students": "الطلاب",
+    "settings": "الإعدادات"
+  },
+  "header": {
+    "title": "إدارة الدورات",
+    "addNew": "+ إضافة دورة جديدة"
+  },
+  "coursesTable": {
+    "headers": {
+      "image": "الصورة",
+      "courseName": "اسم الدورة",
+      "price": "السعر",
+      "description": "الوصف",
+      "actions": "الإجراءات"
+    },
+    "empty": "لا توجد أي دورة حتى الآن."
+  },
+  "courseRow": {
+    "confirmDelete": "هل أنت متأكد أنك تريد حذف \"{{title}}\"؟"
+  },
+  "addCourse": {
+    "title": "إضافة دورة جديدة",
+    "fields": {
+      "courseTitle": "عنوان الدورة",
+      "playlistId": "معرّف قائمة التشغيل",
+      "description": "الوصف",
+      "priceUSD": "السعر (دولار)",
+      "category": "الفئة",
+      "coverImage": "صورة الغلاف"
+    },
+    "category": {
+      "choose": "اختر فئة",
+      "programming": "البرمجة",
+      "graphicDesign": "التصميم الجرافيكي",
+      "socialMedia": "وسائل التواصل الاجتماعي",
+      "marketing": "التسويق",
+      "uiux": "واجهات/تجربة المستخدم"
+    },
+    "buttons": {
+      "submit": "إضافة دورة"
+    },
+    "messages": {
+      "fillRequired": "يُرجى ملء جميع الحقول المطلوبة.",
+      "success": "تمّت إضافة الدورة بنجاح!"
+    }
+  },
+  "editCourse": {
+    "title": "تعديل الدورة",
+    "notFound": "لم يتم العثور على الدورة.",
+    "errorFetching": "حدث خطأ أثناء جلب بيانات الدورة.",
+    "fields": {
+      "courseName": "اسم الدورة",
+      "playlistId": "معرّف قائمة التشغيل",
+      "description": "الوصف",
+      "priceUSD": "السعر (دولار)",
+      "category": "الفئة"
+    },
+    "category": {
+      "choose": "اختر فئة",
+      "programming": "البرمجة",
+      "graphicDesign": "التصميم الجرافيكي",
+      "socialMedia": "وسائل التواصل الاجتماعي",
+      "marketing": "التسويق",
+      "uiux": "واجهات/تجربة المستخدم"
+    },
+    "buttons": {
+      "save": "حفظ التغييرات"
+    },
+    "messages": {
+      "success": "تمّ تحديث الدورة بنجاح.",
+      "error": "حدث خطأ أثناء تحديث الدورة."
+    }
+  },
+
+
+  "checkout": {
+    "empty": {
+      "title": "لم يتم العثور على الدورة",
+      "subtitle": "يرجى اختيار دورة للمتابعة إلى الدفع."
+    },
+    "header": {
+      "title": "أكمل عملية الشراء",
+      "subtitle": "أنت على بُعد خطوة واحدة من الوصول إلى دورتك. اختر طريقة الدفع المفضلة أدناه."
+    },
+    "summary": {
+      "title": "ملخص الدورة",
+      "badge": "دورة مميزة",
+      "whatsIncluded": "ماذا ستجد داخل الدورة:",
+      "features": {
+        "lifetimeAccess": "وصول مدى الحياة إلى محتوى الدورة",
+        "certificate": "شهادة إتمام",
+        "multiDevice": "الوصول عبر الهاتف والكمبيوتر",
+        "support247": "دعم عملاء على مدار الساعة"
+      }
+    },
+    "pricing": {
+      "coursePrice": "سعر الدورة:",
+      "platformFee": "رسوم المنصة:",
+      "total": "الإجمالي:"
+    },
+    "payment": {
+      "title": "طريقة الدفع",
+      "secure": {
+        "title": "دفع آمن",
+        "subtitle": "معلومات الدفع الخاصة بك مشفرة وآمنة"
+      },
+      "helper": "ادفع بأمان عبر باي بال أو البطاقة الائتمانية/الخصم المباشر",
+      "termsNote": {
+        "prefix": "بإتمام عملية الشراء، فأنت توافق على",
+        "tos": "شروط الخدمة",
+        "and": "و",
+        "privacy": "سياسة الخصوصية"
+      }
+    },
+    "trust": {
+      "ssl": "مؤمَّن ببروتوكول SSL",
+      "moneyBack": "ضمان استرجاع الأموال",
+      "support247": "دعم 24/7"
+    },
+    "alerts": {
+      "failed": "فشلت عملية الدفع. يرجى المحاولة مرة أخرى.",
+      "errorTitle": "خطأ في باي بال"
+    }
+  },
+
+
+   "course": {
+    "price": {
+      "label": "السعر:"
+    }
+  },
+  "currency": {
+    "symbol": "$"
+  },
+
+  " Enrolled on": "تم التسجيل في"
+
 }
